# WordNexus-Backend

./: .gitignore  pyproject.toml
config/: settings.py
